// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VideoEmbed component > vimeo 1`] = `
<DocumentFragment>
  <div
    class="video ar-16-9"
    data-astro-cid-zht7hyb4=""
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="40:68"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-cid-zht7hyb4=""
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="45:3"
      src="https://player.vimeo.com/video/test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
   
</DocumentFragment>
`;

exports[`VideoEmbed component > youtube 1`] = `
<DocumentFragment>
  <div
    class="video ar-4-3"
    data-astro-cid-zht7hyb4=""
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="40:68"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-cid-zht7hyb4=""
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="45:3"
      src="https://www.youtube-nocookie.com/embed/test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
   
</DocumentFragment>
`;

exports[`VideoEmbed component > youtube list 1`] = `
<DocumentFragment>
  <div
    class="video ar-16-9"
    data-astro-cid-zht7hyb4=""
    data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
    data-astro-source-loc="40:68"
  >
     
    <iframe
      allow="encrypted-media; fullscreen; gyroscope; picture-in-picture"
      data-astro-cid-zht7hyb4=""
      data-astro-source-file="/Users/guill3m/Projects/carme-miquel/src/components/video-embed.astro"
      data-astro-source-loc="45:3"
      src="https://www.youtube-nocookie.com/embed/videoseries?list=test-id"
      title="Video: Test title"
    >
      
	
    </iframe>
     
  </div>
   
</DocumentFragment>
`;
